added styling to newgame page

--- a/views/newgame.erb
+++ b/views/newgame.erb
@@ -30,11 +30,20 @@ a:active {
   color: #66CDAA;
 }
 
+h1 {
+  font-size: 60px;
+  color: #FF00FF;
+  border-radius: 10px;
+  border-style: inset;
+  border-color: #FF00FF;
+  border-width: 20px;
+}
+
 </style>
 
 <center><body>
   Hello <br/><br/><br/>
-  <%=@name%><br/>
+  <h1><%=@name%></h1><br/>
   <br/>
   <br/>
   <a href='http://localhost:9292/game'>Are you ready to play?</a>
